# crx-intel-sr

./: README.md
crx-extension/: background.js  content.js  injected.js  manifest.json  popup.html  popup.js
sr-native/: Cargo.toml  Makefile  build.rs
sr-native/sr_lib/example/: demo_cli.cpp  demo_node_npi.cpp
sr-native/sr_lib/include/: sr_lib.h
sr-native/src/: main.rs
sr-native/tests/: test_native.py
sr-registered/: WINDOWS_INSTALL.md  com.miguvideo.sr.json  com.miguvideo.sr.windows.json  sr.reg
