[package]
build = "build.rs"
name = "sr-native"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0"
gag = "1.0.0"

[build-dependencies]
cc = "1.0"

# 添加测试程序
[[bin]]
name = "test-minimal"
path = "src/test_minimal.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
